force-app/main/default/objects/Discovery_Finding__c/Discovery_Finding__c.object-meta.xml
<CustomObject>
    <label>Discovery Finding</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>