force-app/main/default/objects/Discovery_Finding__c/fields/Affected_System__c.field-meta.xml
<CustomField>
    <fullName>Affected_System__c</fullName>
    <label>Affected System</label>
    <type>Text</type>
    <length>255</length>
</CustomField>