force-app/main/default/objects/Discovery_Finding__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <label>Business Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Operational</fullName><default>false</default><label>Operational</label></value>
            <value><fullName>Financial</fullName><default>false</default><label>Financial</label></value>
            <value><fullName>Security</fullName><default>false</default><label>Security</label></value>
            <value><fullName>Compliance</fullName><default>false</default><label>Compliance</label></value>
            <value><fullName>Reputation</fullName><default>false</default><label>Reputation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>