force-app/main/default/objects/Discovery_Finding__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Email Security</fullName>
            </value>
            <value>
                <fullName>Endpoint Security</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Backup &amp; Recovery</fullName>
            </value>
            <value>
                <fullName>AI Usage</fullName>
            </value>
            <value>
                <fullName>AI Security</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Incident Response</fullName>
            </value>
            <value>
                <fullName>General Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>