force-app/main/default/objects/Discovery_Finding__c/fields/Discovery_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Assessment__c</fullName>
    <label>Discovery Assessment</label>
    <type>MasterDetail</type>
    <referenceTo>Discovery_Assessment__c</referenceTo>
    <relationshipLabel>Discovery Findings</relationshipLabel>
    <relationshipName>Discovery_Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>