force-app/main/default/objects/Discovery_Finding__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>