force-app/main/default/objects/Discovery_Finding__c/fields/Finding_Name__c.field-meta.xml
<CustomField>
    <fullName>Finding_Name__c</fullName>
    <label>Finding Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>